// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tab > styles > should render with default styles 1`] = `
.circuit-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  padding: 12px 32px;
  color: var(--cui-fg-subtle);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  border: none;
  white-space: nowrap;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
}

<div>
  <button
    aria-selected="false"
    class="circuit-0"
    role="tab"
    tabindex="-1"
  >
    content
  </button>
</div>
`;

exports[`Tab > styles > should render with selected styles 1`] = `
.circuit-0 {
  font-size: 1rem;
  line-height: 1.5rem;
  padding: 12px 32px;
  color: var(--cui-fg-subtle);
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background-color: var(--cui-bg-normal);
  border: none;
  white-space: nowrap;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  float: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline: none;
  position: relative;
  color: var(--cui-fg-normal);
}

.circuit-0:focus {
  outline: 0;
  box-shadow: 0 0 0 4px var(--cui-border-focus);
}

.circuit-0:focus::-moz-focus-inner {
  border: 0;
}

.circuit-0:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-0:hover {
  background-color: var(--cui-bg-normal-hovered);
}

.circuit-0:active {
  background-color: var(--cui-bg-normal-pressed);
}

.circuit-0::after {
  content: ' ';
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 4px;
  background: var(--cui-border-accent);
}

<div>
  <button
    aria-selected="true"
    class="circuit-0"
    role="tab"
  >
    content
  </button>
</div>
`;
